Terraform/infra/us-east-1/environments/kube-worker/security_groups.tf
resource "aws_security_group" "worker-sg" {
  name        = "kube-worker-sg"
  description = "Allow Kubernetes to worker nodes traffic"
  vpc_id = "${data.terraform_remote_state.vpc.vpc-id}"

  ingress {
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 10250
    to_port     = 10250
    protocol    = "TCP"
    cidr_blocks = ["192.168.0.0/16"]
  }

  ingress {
    from_port   = 10255
    to_port     = 10255
    protocol    = "TCP"
    cidr_blocks = ["192.168.0.0/16"]
  }

  ingress {
    from_port   = 8285
    to_port     = 8285
    protocol    = "UDP"
    cidr_blocks = ["192.168.0.0/16"]
  }

  ingress {
    from_port   = 8472
    to_port     = 8472
    protocol    = "UDP"
    cidr_blocks = ["192.168.0.0/16"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
